<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="search_instruction">Enter a quote key word to search a quote.</string>
    <string name="search_hint">Enter search here</string>
    <string name="search_button">Search</string>
    <string name="search_result">Result</string>
    <string name="app_name">Quotation</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="random_quote_label">Random Quotes</string>
    
    <string name="button_to_search_page">To Search Page</string>
    <string name="button_to_category_page">To Category Page</string>
    <string name="button_to_welcome_page">To Welcome Page</string>
    
    <string name="menu_item_to_search_page">To Search Page</string>
    <string name="menu_item_to_category_page">To Category Page</string>
    <string name="menu_item_to_welcome_page">To Welcome Page</string>
    
    <string name="menu_item_to_sub_category_page">To Sub Category Page</string>
    <string name="submenu_item_computer">computer</string>
    <string name="submenu_item_family">family</string>
    <string name="submenu_item_food">food</string>
    <string name="submenu_item_funny">funny</string>
    <string name="submenu_item_inspirational">inspirational</string>
    <string name="submenu_item_motivational">motivational</string>
    <string name="submenu_item_music">music</string>
    <string name="submenu_item_positive">positive</string>
    <string name="submenu_item_smile">smile</string>
    <string name="submenu_item_wisdom">wisdom</string>

    <string-array name="categories_array">
        <item>computer</item>
        <item>family</item>
        <item>food</item>
        <item>funny</item>
        <item>inspirational</item>
        <item>motivational</item>
        <item>music</item>
        <item>positive</item>
        <item>smile</item>
        <item>wisdom</item>
    </string-array>

    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="text_selected_category">selected none</string>
    <string name="title_activity_guide">Quotations</string>
    <string name="skip">Skip</string>
    <string name="endGuide">Got it!</string>


</resources>
