<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon144" />
    
    <TextView
        android:id="@+id/tvSearchInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/search_instruction" />

    <EditText
        android:id="@+id/etSearchKeyWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSearchInstruction"
        android:ems="10"
        android:hint="@string/search_hint" />

    <Button
        android:id="@+id/btnSearch"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etSearchKeyWord"
        android:onClick="onSearchButtonClicked"
        android:text="@string/search_button" />

    <TextView
        android:id="@+id/tvSearchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnSearch"
        android:text="@string/search_result" />

    <ListView
        android:id="@+id/lvMatchedQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSrchPageToHomePage"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSearchResult" >

    </ListView>
    
    <Button
        android:id="@+id/btnSrchPageToHomePage"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/button_to_home_page"
        android:onClick="onSrchPageToHomePage" />

    <Button
        android:id="@+id/btnSrchPageToCatPage"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnSrchPageToHomePage"
        android:text="@string/button_to_category_page"
        android:onClick="onSrchPageToCatPage" />

</RelativeLayout>