<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tvSelectedCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_selected_category" />

    <Button
        android:id="@+id/btnCatPageToWelcPage"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="onCatPageToWelcPage"
        android:text="@string/button_to_welcome_page" />

    <Button
        android:id="@+id/btnCatPageToSrchPage"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnCatPageToWelcPage"
        android:text="@string/button_to_search_page"
        android:onClick="onCatPageToSrchPage" />

    <ListView
        android:id="@+id/lvMatchedCatQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCatPageToWelcPage"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSelectedCategory" >

    </ListView>

</RelativeLayout>