<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
    
    <TextView
        android:id="@+id/tvRandomQuoteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/random_quote_label" />
    
    <ListView
        android:id="@+id/lvRandomQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnWelcPageToSrchPage"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvRandomQuoteLabel" >
    </ListView>

    <Button
        android:id="@+id/btnWelcPageToSrchPage"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/button_to_search_page"
        android:onClick="onWelcPageToSrchPage" />

    <Button
        android:id="@+id/btnWelcPageToCatPage"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnWelcPageToSrchPage"
        android:text="@string/button_to_category_page"
        android:onClick="onWelcPageToCatPage" />

</RelativeLayout>